# yvis3DRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
behaviors/: ygeneratebehavior.cpp  ygeneratebehavior.h  yrotatingbehavior.cpp  yrotatingbehavior.h
core/: yapplication.cpp  yapplication.h  ybaseuniform.cpp  ybaseuniformvalue.h  ycamera.cpp  ycamera.h  ycustomrenderquad.cpp  ycustomrenderquad.h  yframebuffer.cpp  yframebuffer.h  ygenericbehavior.cpp  ygenericbehavior.h  yinstancemesh.cpp  yinstancemesh.h  ylight.cpp  ylight.h  ylightuniform.cpp  ylightuniform.h  ymaterial.cpp  ymaterial.h  ymaterialinstance.cpp  ymaterialinstance.h  ymaterialrenderquad.cpp  ymaterialrenderquad.h  ymesh.cpp  ymesh.h  ymodel.cpp  ymodel.h  yrenderer.cpp  yrenderer.h  yrenderquad.cpp  yrenderquad.h  yscene.cpp  yscene.h  yshader.cpp  yshader.h  ytexture.cpp  ytexture.h  ytransform.cpp  ytransform.h  (+5 more)
core/uniforms/: yfoguniform.cpp  yfoguniform.h  ylightuniform.cpp  ylightuniform.h
data/models/: .gitattributes  monkey.blend  monkey.fbx  monkey_.fbx  monkey_gltf.glb  monkey_n.fbx  tetrahedron.fbx  tetrahedron_.fbx
data/scenes/: edge_detection_scene.lua  loaded_scene_example.lua  scene_simple.lua  skybox_scene.lua  tri_light_scene.lua
effects/: ypostprocess.cpp  ypostprocess.h
elements/: yfog.h  ylightobject.cpp  ylightobject.h  yobject.cpp  yobject.h  yrenderobject.cpp  yrenderobject.h  yskybox.cpp  yskybox.h
math/: YBoundingBox.cpp  yboundingbox.cpp  yboundingbox.h
scenes/: yedgedetectionscene.cpp  yedgedetectionscene.h  yfogscene.cpp  yfogscene.h  yloadedscene.cpp  yloadedscene.h  yskyboxscene.cpp  yskyboxscene.h
utils/: yglhelper.cpp  yglhelper.h  yluahelper.cpp  yluahelper.h
view/: YObjectUI.cpp  YObjectUI.h  yobjectui.cpp  yobjectui.h
